T3: Add ISBN field

--- a/src/Cocorico/CoreBundle/Resources/config/Services/subscribers.yml
+++ b/src/Cocorico/CoreBundle/Resources/config/Services/subscribers.yml
@@ -23,3 +23,11 @@ services:
             - "@logger"
         tags:
             - { name: kernel.event_subscriber}
+
+    #ListingForm  subscriber
+    cocorico.listing_form.subscriber:
+        class: Cocorico\CoreBundle\Event\ListingFormSubscriber
+        arguments:
+            - "@logger"
+        tags:
+            - { name: kernel.event_subscriber}
